2003-01-07  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataList.cs: fixed IRepeatInfoUser.GetItemStyle.

2002-12-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BaseValidator.cs: return an empty string in GetControlValidationValue
	when GetValue returned null.

	* CompareValidator.cs: fixed EvaluateIsValid.

	* RegularExpressionValidator.cs: fixed EvaluateIsValid.

2002-12-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Xml.cs: use MapPathSecure to get the path of the document.

2002-12-13  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataList.cs: fixed header & footer.

2002-12-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataList.cs: for header and footer don't use data source.
	Instantiate in the DataListItem, not in the DataList.
	databind-template.aspx works now.

2002-11-21  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* BaseDataList.cs:
	(Render): call RenderContents (), not base.RenderContents ().

	* DataList.cs: style.

	But I still haven't found what i'm looking for....

2002-11-20  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* Calendar.cs: fixed loading/saving selected dates.
	* SelectedDatesCollection.cs: added internal function to get the
	underlying ArrayList.

	Calendar navigation works again. Selecting dates too.

2002-11-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DataList.cs: added a few attributes and fixed infinite recursion.

2002-11-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* ListItemCollection.cs: fixed LoadViewState.

2002-11-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* TableItemStyle.cs: TypeDescriptor.GetConverter seems to fail.
	Commented out some code until it works.

2002-10-29      Gaurav Vaish <gvaish_mono@lycos.com>

	* BaseCompareValidator.cs - Fixed operator bug in 
	                            Compare(string, string, ...)
	* CompareValidator.cs     - EvaluateIsValid()            : Implemented.

2002-10-28      Gaurav Vaish <gvaish_mono@lycos.com>
